fixing contrast issues

--- a/css/universalStyle.css
+++ b/css/universalStyle.css
@@ -5,7 +5,7 @@
 }
 /* text shadow to inecrease readning and improve contrast */
 body {
-  background-color: #003459;
+  background-color: #003869;
 }
 :hover {
   text-shadow: 0px 0px 0px #000000;
@@ -19,3 +19,5 @@ body {
 .person:hover {
   opacity: 1;
 }
+
+
